# FastAPI-eCom

./: .gitignore  README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: quality.yml  tests.yml
database/: db_setup.py
database/models/: business.py  customer.py  order.py  product.py
db_details/: db_erd.drawio
docs/db_details/: db_erd.drawio
fastapi_ecom/: alembic.ini  app.py  db_creds.py.example  main.py
fastapi_ecom/config/: config.py.example
fastapi_ecom/database/: __init__.py  db_setup.py
fastapi_ecom/database/models/: __init__.py  business.py  customer.py  order.py  order_detail.py  order_details.py  product.py  util.py
fastapi_ecom/database/pydantic_schemas/: business.py  customer.py  order.py  order_details.py  product.py  util.py
fastapi_ecom/migrations/: alembic.ini.example  env.py  main.py
fastapi_ecom/migrations/versions/: 02d907ef8e5b_add_oauth_related_fields.py  29f5c5a0304d_modify_date_field_mixin.py  306d801996a6_initial_model_setup.py  4ef0779c94f3_initialize_tables.py  60c8ccec25ac_create_and_update_date_with_relation_.py  7d1eff027259_remove_creation_date_from_base_models_.py  97e78a849e66_add_creation_date_mixin_in_orders.py  c9f3749998ac_initial_model_setup.py  d6dd218459b7_change_datatype_of_password_column.py
fastapi_ecom/router/: business.py  customer.py  order.py  product.py
fastapi_ecom/utils/: auth.py  basic_auth.py  logging_setup.py  oauth.py
fastapi_ecom/utils/crud/: business.py  customer.py  order.py  product.py
tests/: __init__.py  conftest.py  test_business.py  test_root.py
tests/business/: __init__.py  test_business_delete.py  test_business_get.py  test_business_post.py  test_business_put.py
tests/customer/: __init__.py  test_customer_delete.py  test_customer_get.py  test_customer_post.py  test_customer_put.py
tests/main/: test_comd_create_migration.py  test_comd_db_version.py  test_comd_downgrade_db.py  test_comd_setup.py  test_comd_start.py  test_comd_upgrade.py  test_main_help.py
tests/order/: __init__.py  test_order_delete.py  test_order_get.py  test_order_post.py
tests/product/: __init__.py  test_product_delete.py  test_product_get.py  test_product_post.py  test_product_put.py
tests/root/: test_root.py  test_root_get.py
