[tool.poetry]
name = "fastapi_ecom"
version = "0.1.0"
description = "E-Commerce API for businesses and end users using FastAPI"
authors = ["Shounak Dey <shounakdey@ymail.com>"]
readme = "README.md"
packages = [{include = "fastapi_ecom"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
bcrypt = "^4.2.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"fastapi_ecom/*" = ["E501", "B008"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fastapi_ecom = "fastapi_ecom.main:main"
