[tool.poetry]
name = "fastapi_ecom"
version = "0.1.0"
description = "E-Commerce API for businesses and end users using FastAPI"
authors = ["Shounak Dey <shounakdey@ymail.com>"]
readme = "README.md"
packages = [{include = "fastapi_ecom"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
bcrypt = "^4.2.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
pytest = "^8.3.3"
tox = "^4.23.2"
pytest-cov = "^6.0.0"
coverage = "^7.6.8"
pytest-asyncio = "^0.24.0"
aiosqlite = "^0.20.0"
pytest-mock = "^3.14.0"

[tool.ruff]
line-length = 150
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"fastapi_ecom/*" = ["B008"]
"tests/*" = ["S101", "S106",]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = "ignore"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fastapi_ecom = "fastapi_ecom.main:main"

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
omit = [
    "fastapi_ecom/migrations/versions/*.py",
    "fastapi_ecom/migrations/env.py"
]
