[tool.poetry]
name = "fastapi_ecom"
version = "0.1.0"
description = "E-Commerce API for businesses and end users using FastAPI"
authors = ["Shounak Dey <shounakdey@ymail.com>"]
readme = "README.md"
packages = [{include = "fastapi_ecom"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
bcrypt = "^5.0.0"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.11.7"}
authlib = "^1.6.1"
httpx = "^0.28.1"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
pytest = "^9.0.0"
tox = "^4.23.2"
pytest-cov = "^7.0.0"
coverage = "^7.6.8"
pytest-asyncio = "^1.0.0"
aiosqlite = "^0.21.0"
pytest-mock = "^3.14.0"

[tool.ruff]
line-length = 150
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"fastapi_ecom/*" = ["B008"]
"tests/*" = ["S101", "S106",]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = "ignore"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fastapi_ecom = "fastapi_ecom.main:main"

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
omit = [
    "fastapi_ecom/migrations/versions/*.py",
    "fastapi_ecom/migrations/env.py"
]
